Add fix_args function